@@ -1,3 +1,7 @@
+* Add callback option.
+
+  Contributed by: Robert Rothenberg
+
 [Changes for 0.9506 - Mon Jul 27 23:07:16 CST 2015]
 
 * Allow use of Linux::Smaps::Tiny and prefer it over Linux::Smaps.
